# FastApiRedis

./: main.py  main_new.py  pyproject.toml
